--- a/Search/src/app/components/search/search.component.html
+++ b/Search/src/app/components/search/search.component.html
@@ -1,1 +1,4 @@
-<p>search works!</p>
+<mat-form-field class="mat-form-field">
+    <input [formControl]="search" matInput placeholder="Búsqueda">
+</mat-form-field>
+
