--- a/Search/src/styles.scss
+++ b/Search/src/styles.scss
@@ -1,4 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
-
+/* You can add global styles to this file, and also import other style files 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 20px;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+/* En el search.component.html estamos llamando a esta clase */
+.mat-form-field {
+    width: 100%;
+    color: blueviolet; /* Se pone de este color la línea cuando pinchamos encima */
+}
+
+
