Cogidas las propiedades de users de jsonplaceholder.typicode.com
Cómo el tutorial lo hace no coge las propiedades de users ( https://jsonplaceholder.typicode.com/users ) por las versiones, pero realizado correctamente con "interface Usuario" y lo otro distinto (lo comentado es lo suyo)

Antes de 19:30
https://www.youtube.com/watch?v=u-LcW9FsMac&list=PLezsbUDiwcpmhNiMzVPYJXV0Rqn71G4PU&index=21

--- a/Search/src/app/components/app/app.component.html
+++ b/Search/src/app/components/app/app.component.html
@@ -1,1 +1,18 @@
 <app-search (search)="handleSearch($event)"></app-search>
+
+<!-- Cogidos de https://jsonplaceholder.typicode.com/users 
+Para importarlos hay que importar el HttpClientModule en el app.module.ts -->
+<h3>Nombres:</h3>
+<ul>
+  <li *ngFor="let usuario of usuarios">{{ usuario.name }}</li>
+</ul>
+
+<h3>Usuario:</h3>
+<ul>
+  <li *ngFor="let usuario of usuarios">{{ usuario.username }}</li>
+</ul>
+
+<h3>Teléfono:</h3>
+<ul>
+  <li *ngFor="let usuario of usuarios">{{ usuario.phone }}</li>
+</ul>
