Pipe "filter" creado y editados archivos para verlo en el buscador
Creado el piper: filter
Y editados archivos para verlo en el buscador.

--- a/Search/src/app/components/app/app.component.html
+++ b/Search/src/app/components/app/app.component.html
@@ -4,9 +4,10 @@
 Para importarlos hay que importar el HttpClientModule en el app.module.ts -->
 <h3>Nombres:</h3>
 <ul>
-  <li *ngFor="let usuario of usuarios">{{ usuario.name }}</li>
+  <li *ngFor="let usuario of usuarios | filter:filtro_valor ">{{ usuario.name }}</li>
 </ul>
 
+<!-- 
 <h3>Usuario:</h3>
 <ul>
   <li *ngFor="let usuario of usuarios">{{ usuario.username }}</li>
@@ -15,4 +16,4 @@ Para importarlos hay que importar el HttpClientModule en el app.module.ts -->
 <h3>Teléfono:</h3>
 <ul>
   <li *ngFor="let usuario of usuarios">{{ usuario.phone }}</li>
-</ul>
+</ul> -->
