Actualizado app.component.html
Para que se busque por Nombre y arroje los resultados de usuario y número de teléfono.

Es decir, busca el nombre y te aparece Usuario y teléfono también.

No busca usuario o teléfono.

--- a/Search/src/app/components/app/app.component.html
+++ b/Search/src/app/components/app/app.component.html
@@ -1,3 +1,4 @@
+<h1>Búsqueda por Nombre:</h1>
 <app-search (search)="handleSearch($event)"></app-search>
 
 <!-- Cogidos de https://jsonplaceholder.typicode.com/users 
@@ -7,13 +8,15 @@ Para importarlos hay que importar el HttpClientModule en el app.module.ts -->
   <li *ngFor="let usuario of usuarios | filter:filtro_valor ">{{ usuario.name }}</li>
 </ul>
 
-<!-- 
 <h3>Usuario:</h3>
 <ul>
-  <li *ngFor="let usuario of usuarios">{{ usuario.username }}</li>
+  <li *ngFor="let usuario of usuarios | filter:filtro_valor ">{{ usuario.username }}</li>
 </ul>
 
 <h3>Teléfono:</h3>
 <ul>
-  <li *ngFor="let usuario of usuarios">{{ usuario.phone }}</li>
-</ul> -->
+  <li *ngFor="let usuario of usuarios | filter:filtro_valor ">{{ usuario.phone }}</li>
+</ul> 
+
+
+<!-- <app-search (search)="handleSearch($event)"></app-search> -->
