--- a/Search/src/app/components/app/app.component.html
+++ b/Search/src/app/components/app/app.component.html
@@ -50,17 +50,17 @@ Para importarlos hay que importar el HttpClientModule en el app.module.ts -->
 
 <h3>Teléfono:</h3>
 <ul>
-  <li *ngFor="let usuario of username | filterTelefono:filtro_valor ">{{ usuario.phone }}</li>
+  <li *ngFor="let usuario of phone | filterTelefono:filtro_valor ">{{ usuario.phone }}</li>
 </ul> 
 
 <h3>Nombres:</h3>
 <ul>
-  <li *ngFor="let usuario of username | filterTelefono:filtro_valor ">{{ usuario.name }}</li>
+  <li *ngFor="let usuario of phone | filterTelefono:filtro_valor ">{{ usuario.name }}</li>
 </ul>
 
 <h3>Usuario:</h3>
 <ul>
-  <li *ngFor="let usuario of username | filterTelefono:filtro_valor ">{{ usuario.username }}</li>
+  <li *ngFor="let usuario of phone | filterTelefono:filtro_valor ">{{ usuario.username }}</li>
 </ul>
 
 
